--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -100,6 +100,13 @@
   .bap-achievement {
     @apply flex items-center justify-start;
   }
+  .text-header {
+    @apply relative mb-[7.5px] flex gap-[25px] text-2xl font-semibold leading-10 text-black;
+  }
+  .text-header-icon {
+    @apply relative top-0 flex h-[56px] w-[50px] items-center justify-center bg-cover;
+    background-image: url("../assets/images/polygon-bg.png");
+  }
   .text-header-text {
     @apply inline-block pt-[7px] text-2xl font-medium leading-[30px] text-black;
     width: calc(100% - 75px);
@@ -175,6 +182,10 @@
   }
   #block-right .offshore-list-item::after {
     @apply -left-[22px] right-[unset];
+  }
+  .client-recomments {
+    @apply block;
+    background: linear-gradient(to top, #f7fafc 50%, #fff 50%);
   }
 }
 .slider-item-active {
