feat: complete electron part in desktop version

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -23,7 +23,7 @@
     @apply -mx-[10px] flex flex-wrap;
   }
   .navbar-toggler {
-    @apply my-auto  hidden cursor-pointer rounded-[4px] bg-transparent py-2 max-2lg:flex max-2lg:flex-col max-2lg:gap-1;
+    @apply my-auto  flex cursor-pointer flex-col gap-1 rounded-[4px] bg-transparent py-2 2lg:hidden;
   }
   .navbar-toggler:not(.collapsed) span:nth-child(1) {
     @apply translate-y-[6px] rotate-45;
@@ -35,19 +35,20 @@
     @apply translate-y-[-6px] -rotate-45;
   }
   .navbar-menu {
-    @apply z-[9] 2lg:flex 2lg:items-center max-2lg:fixed max-2lg:-left-full max-2lg:top-[74px] max-2lg:h-full max-2lg:w-full max-2lg:overflow-y-auto max-2lg:bg-white max-2lg:transition-all max-2lg:duration-300 max-2lg:ease-in-out;
+    @apply fixed -left-full top-[74px] z-[9] h-full w-full overflow-y-auto bg-white transition-all duration-300 ease-in-out 2lg:relative 2lg:left-[unset] 2lg:top-[unset] 2lg:flex 2lg:h-[unset] 2lg:w-[unset] 2lg:items-center 2lg:overflow-y-visible 2lg:bg-transparent;
   }
+
   .navbar-menu .main-menu {
-    @apply float-left m-0 list-none p-0 2lg:flex max-2lg:w-full max-2lg:py-[10px];
+    @apply w-full list-none py-[10px] 2lg:float-left 2lg:m-0 2lg:flex 2lg:w-[unset] 2lg:p-0;
   }
   .navbar-menu .lang-menu {
-    @apply float-left mt-[20px] flex items-center justify-center gap-[5px] py-[15px] 2lg:my-auto 2lg:ml-[25px] max-2lg:w-full;
+    @apply float-left mt-[20px] flex w-full items-center justify-center gap-[5px] py-[15px] 2lg:my-auto 2lg:ml-[25px] 2lg:w-[unset];
   }
   .navbar-menu .main-menu .main-menu-item {
-    @apply relative 2lg:ml-[22px] 2lg:p-0 max-2lg:w-full;
+    @apply relative w-full border-b-[1px] border-solid border-[#ececec] 2lg:ml-[22px] 2lg:w-[unset] 2lg:border-none 2lg:p-0;
   }
   .navbar-menu .main-menu .main-menu-item .main-menu-item-link {
-    @apply relative inline-block w-fit bg-transparent py-[10px] text-left text-[13px] font-normal tracking-[0.8px] text-white duration-200 hover:text-[#037eee] max-2lg:px-[15px] max-2lg:text-[#333];
+    @apply relative inline-block w-fit bg-transparent py-[10px] px-[15px] text-left text-[13px] font-normal tracking-[0.8px] text-[#333] duration-200 hover:text-[#037eee] 2lg:px-0 2lg:text-white;
   }
 
   .navbar-menu .main-menu .main-menu-item .sub-menu-toggle {
@@ -62,7 +63,7 @@
   }
 
   .navbar-menu .main-menu .main-menu-item .sub-menu::before {
-    @apply absolute h-0 w-0  border-x-[5px] border-b-[10px] border-solid border-x-transparent border-b-[#037eee] 2lg:-top-[14px] 2lg:left-[10%];
+    @apply absolute h-0  w-0 border-solid 2lg:-top-[14px] 2lg:left-[10%] 2lg:border-x-[5px] 2lg:border-b-[10px] 2lg:border-x-transparent 2lg:border-b-[#037eee];
     content: "";
   }
 
@@ -117,7 +118,180 @@
   .bap-slider .bap-intro-slider .bap-intro-left .contact-button .btn {
     @apply !w-[unset] text-[17px] 2md:w-[250px] 2md:text-[18.75px];
   }
+  /* electron part */
+  .bap-slider .bap-electron {
+    @apply relative w-full;
+  }
+  .bap-slider .bap-electron .bap-intro-right {
+    @apply hidden lg:block;
+  }
+  .bap-slider .bap-electron .bap-intro-right .bap-intro-right-inner {
+    @apply float-right h-[460px] w-[460px] rounded-[50%] bg-[rgba(94,132,253,0.12)] p-[77.5px];
+  }
+  .bap-electron .bap-intro-right .bap-intro-right-inner .bap-list-services {
+    @apply relative h-[305px] w-[305px];
+  }
+  .bap-electron .bap-intro-right .bap-intro-right-inner .cicle-wave-1 {
+    @apply absolute top-[100px] left-[100px] h-[105px] w-[105px] animate-[wave] rounded-[50%] bg-[rgba(109,144,255,0.3)];
+    animation-duration: 6000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item-center {
+    @apply absolute left-[60px] top-[60px] flex h-[185px] w-[185px] items-center justify-center rounded-[50%] bg-[rgba(109,144,255,0)];
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item-center
+    a {
+    @apply relative h-[110px] w-[110px];
+  }
+  .bap-electron .bap-intro-right .bap-intro-right-inner .list-services-item a {
+    @apply -translate-x-[50%] -translate-y-[50%];
+  }
+  .bap-electron .bap-intro-right .bap-intro-right-inner .list-services-item a {
+    @apply absolute z-[2] flex scale-100 flex-col items-center  justify-center rounded-[50%] bg-[#0F6FD8] transition-all duration-300 ease-in-out;
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item
+    a:hover {
+    @apply scale-125;
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item
+    a
+    img {
+    @apply h-[54px] w-[54px] max-w-full text-center;
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item
+    a
+    .title-icon {
+    @apply relative text-center text-[14px] text-white;
+  }
+  .bap-electron .bap-intro-right .bap-intro-right-inner .item-1 a {
+    @apply top-[1px] left-[55%] h-[26px] w-[26px];
+  }
+  .bap-electron .bap-intro-right .bap-intro-right-inner .item-2 a {
+    @apply top-[20%] -right-[20%] h-[90px] w-[90px] gap-[10px];
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item.item-2
+    a
+    img {
+    @apply max-h-[32px] max-w-[27px];
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item.item-2
+    .title-icon {
+    @apply px-[5px];
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item.item-2
+    a
+    span {
+    @apply relative -top-[10px] text-[11px];
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item.item-3
+    a
+    span {
+    @apply relative text-[11px];
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item.item-3
+    a {
+    @apply top-[80%] -right-[20%] h-[90px] w-[90px];
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item.item-3
+    a
+    img {
+    @apply max-h-[27px] max-w-[32px] -translate-y-[10px];
+  }
 
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item.item-5
+    a {
+    @apply left-[45%] -bottom-[13%] h-[45px] w-[45px];
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item.item-6
+    a {
+    @apply left-[7%] top-[70%] h-[90px] w-[90px];
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item.item-6
+    a
+    img {
+    @apply max-h-[40px] max-w-[38px] -translate-y-[5px];
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item.item-6
+    a
+    span {
+    @apply relative  text-[11px];
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item.item-7
+    a {
+    @apply left-[12%] top-[16%] h-[90px] w-[90px];
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item.item-7
+    a
+    img {
+    @apply max-h-[32px] max-w-[35px] -translate-y-[10px];
+  }
+  .bap-electron
+    .bap-intro-right
+    .bap-intro-right-inner
+    .list-services-item.item-7
+    a
+    span {
+    @apply relative  text-[11px];
+  }
+
+  .bap-electron .bap-intro-right .bap-intro-right-inner .circle-spin {
+    @apply absolute left-0 top-0 z-[1] h-[305px] w-[305px] animate-[roundspin];
+    animation-duration: 9000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
   .slideshow {
     @apply relative z-[1] h-screen w-screen overflow-hidden bg-[#333];
   }
@@ -467,6 +641,9 @@
   .fixed-top {
     @apply fixed inset-0 bottom-[unset] z-[100];
   }
+  .col-lg-6 {
+    @apply lg:max-w-[50%] lg:flex-col6;
+  }
 }
 
 @keyframes iconzoom {
@@ -479,5 +656,34 @@
   }
   100% {
     transform: scale(1);
+  }
+}
+
+@keyframes wave {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+  50% {
+    opacity: 1;
+    -webkit-transform: scale(2.6);
+    transform: scale(2.6);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(4.2);
+    transform: scale(4.2);
+  }
+}
+
+@keyframes roundspin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
