--- a/public/styles/about.css
+++ b/public/styles/about.css
@@ -16,19 +16,221 @@
     @apply text-[13.3708px] uppercase leading-[16px] tracking-[-.322472px] text-[#797979];
   }
   .about-contain {
-    @apply py-[10px] text-left text-[14px] leading-[1.8] tracking-[-.385882px] text-[#696969] lg:text-[16px];
+    @apply mt-[7.5px] py-[10px] text-left text-[14px] leading-[1.8] tracking-[-.385882px] text-[#696969] lg:text-[16px];
   }
   p {
     @apply mb-[15px];
   }
   .number-post {
-    @apply mr-[20px] border-b-[2px] border-solid border-[#0986ff] pb-[15px] text-[60px] font-[500] leading-[71px] text-[#141414];
+    @apply mr-[20px] border-b-[2px] border-solid border-[#0986ff] pb-[15px] text-[60px] font-[400] leading-[71px] text-[#141414];
+  }
+
+  .section {
+    @apply py-[30px] md:py-[50px] 3xl:py-[60px];
+  }
+
+  .fadeInLeft {
+    @apply animate-[fadeInLeft];
   }
 }
 @layer utilities {
 }
 
 .new-about-header {
-  @apply flex h-[45vh] items-center justify-center bg-cover bg-center bg-no-repeat;
+  @apply flex h-[45vh] items-center justify-center bg-cover bg-center bg-no-repeat 2md:bg-aboutheader;
   background-image: url("../assets/images/banner-about.jpg");
+}
+
+.ceo-messages {
+  @apply bg-contain bg-right bg-no-repeat;
+  background-image: url("../assets/images/worldmap.png");
+}
+
+.ceo-messages .row {
+  @apply flex flex-col-reverse lg:flex-row;
+}
+.ceo-block-right .about-contain {
+  @apply py-[10px] text-left text-[14px] leading-[1.5] tracking-[.114118px] text-[#696969] lg:text-[16px];
+}
+
+.ceo-messages .read-more .btn {
+  @apply w-[unset] max-w-[unset] cursor-pointer rounded-[5px]  px-[30px] py-[11.25px] font-normal leading-[26.25px];
+}
+.btn-outline-primary {
+  @apply border-[#007bff] text-[#007bff] hover:border-[#007bff] hover:bg-[#007bff] hover:text-white;
+}
+#ceo-messages-more-info {
+  @apply overflow-hidden transition-all duration-300 ease-in-out;
+}
+.ceo-block-right .ceo-info img {
+  @apply mt-[10px] w-1/2 max-w-full align-middle;
+}
+.ceo-img img {
+  @apply h-auto w-[300px] max-w-full align-middle;
+}
+.block-header.header-company-info {
+  @apply w-full justify-between;
+}
+.block-header.header-company-info .block-file a {
+  @apply border-[1px] border-solid transition-all duration-300 ease-in-out;
+}
+.block-header.header-company-info .block-file .text {
+  @apply invisible hidden rounded-md border-transparent bg-[#3c90fd] py-[5px] px-[10px] font-[500] uppercase  text-white hover:border-[#3c90fd] hover:bg-white  hover:text-[#3c90fd] sm:visible sm:block md:py-[10px] md:px-[25px];
+}
+.block-header.header-company-info .block-file .icon {
+  @apply visible block rounded-md border-[#3c90fd] bg-[#3c90fd] p-[10px]  hover:bg-white sm:invisible sm:hidden;
+}
+.block-header.header-company-info .block-file .icon:hover svg g path {
+  @apply fill-[#3c90fd];
+}
+.block-header.header-company-info .block-file .icon svg g path {
+  @apply fill-white;
+}
+
+.block-header.header-company-info .block-file .icon svg {
+  @apply h-[32px] w-full max-w-[32px];
+}
+
+.block-info-company {
+  @apply flex items-center;
+}
+
+.basic-info,
+.basic-derection {
+  @apply border-b-[1px] border-solid border-[#d5d5d5] py-[15px] lg:py-[30px];
+}
+.basic-info.stack-company .basic-data {
+  @apply grid grid-cols-2 border-b-[1px] border-dotted border-[#d5d5d5] py-[10px] lg:flex;
+}
+.basic-info .basic-data {
+  @apply flex;
+}
+.company-infomation .basic-data h5 {
+  @apply mb-[7.5px] table  border-l-[4px] border-solid border-[#6bb6fd] pl-[20px] text-[14px] font-[400] leading-[21px] text-black lg:text-[16px];
+}
+.company-infomation .basic-data h4 {
+  @apply mb-[7.5px] mt-[15px] text-[14px] font-[400] uppercase leading-[26px] text-[#090909] lg:text-[22px];
+}
+
+.basic-info .basic-data p {
+  @apply mb-0 pl-[20px] text-[14px] text-[#505050];
+}
+
+.company-infomation .basic-derection .basic-data h5 {
+  @apply mb-[20px];
+}
+
+.avatar-mask-gray:hover::before {
+  @apply left-[-130%];
+}
+
+.avatar-mask-gray {
+  @apply relative overflow-hidden;
+}
+
+.avatar-mask-gray::before {
+  @apply absolute top-0 left-[110%] z-[2] h-full w-[130%] bg-[rgba(255,255,255,0.4)];
+  content: "";
+  transition: 0.4s;
+}
+
+.manager-avatar img {
+  @apply min-h-[205px] max-w-full object-cover align-middle;
+}
+.manager-avatar-left.basic-data {
+  @apply mb-[15px];
+}
+
+.manager-avatar-left.basic-data a {
+  @apply bg-transparent text-[#007bff] hover:text-[#0056b3] hover:underline;
+  transition: 0.2s;
+}
+
+#bap-company .basic-info.content-single h5,
+#bap-company .basic-info.content-single h5.ab-title {
+  @apply w-[100px];
+}
+#bap-company .basic-info.content-single h5 {
+  @apply sm:w-[20%];
+}
+#bap-company .basic-info .basic-data > p,
+#bap-company .basic-info .basic-data > div {
+  @apply max-sm:w-[calc(100%-100px)];
+}
+.basic-info .basic-data > div {
+  @apply pl-[20px];
+}
+.basic-info .basic-data > div ul {
+  @apply max-sm:w-full;
+}
+.basic-info .basic-data ul {
+  @apply m-0 p-0;
+}
+.basic-info .basic-data li {
+  @apply list-none leading-[1.5] text-[#212529] max-lg:text-[12px];
+}
+
+.info-contact-ab {
+  @apply border-b-[1px] border-solid border-[#ededed];
+}
+.info-contact-ab .basic-info {
+  @apply border-none;
+}
+.info-contact-ab .basic-info.content-single h5.ab-title {
+  @apply sm:w-[110px];
+}
+.office-map-country {
+  @apply my-[30px];
+}
+.office-map-country .btn-gradient-blue {
+  @apply select-none rounded-none border-none bg-[#24a8ff] py-[10px] px-[20px] text-[15px] font-normal uppercase leading-[26.25px] !text-white transition-all duration-200 ease-in-out hover:shadow-btngradientblue;
+  background-image: linear-gradient(left, #24a8ff, #4ad3ff);
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#24a8ff),
+    to(#4ad3ff)
+  );
+}
+.office-map-item .bap-map-title {
+  @apply mb-[15px] min-h-[46px];
+}
+.office-map-item .bap-map-title p {
+  @apply text-[14px] text-[#5b5b5b];
+}
+.office-map-item .bap-map-iframe {
+  @apply shadow-bapmapiframe max-lg:mb-[20px];
+}
+.office-map-item .bap-map-iframe iframe {
+  @apply -mb-[6px];
+}
+
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-20px);
+    -ms-transform: translateX(-20px);
+    transform: translateX(-20px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(20px);
+    -ms-transform: translateX(20px);
+    transform: translateX(20px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transform: translateX(0);
+  }
 }
